Text decoration gap fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,8 +146,7 @@ a[rel] {
 }
 
 article a[href*="//"]:not([href*="paulfosterdesign.co.uk/"]):after {
-    content: "\2794";
-    padding: .125em;
+    content: " \2794";
     font-size: initial;
     color: currentColor
 }
